# champion-recap

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
champion-audio-crawler/: .gitignore  README.md  pyproject.toml
champion-audio-crawler/src/champion_crawler/: __init__.py  cli.py  concatenator.py  models.py  processor.py  scraper.py  state_manager.py
voice-cloning/: .gitignore  README.md  bedrock-coaching-prompts.json  champion-personalities.json  pyproject.toml
voice-cloning/champion-voices/: README.md
voice-cloning/champion-voices/aatrox/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/ahri/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/akali/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/akshan/: metadata.csv  metadata.json  reference.txt  slicer_opt.list  train.txt
voice-cloning/champion-voices/alistar/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/ambessa/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/amumu/: metadata.csv  metadata.json  reference.txt  slicer_opt.list  train.txt
voice-cloning/champion-voices/anivia/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/annie/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/aphelios/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/ashe/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/aurelion_sol/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/aurora/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/azir/: metadata.csv  metadata.json  reference.txt  slicer_opt.list  train.txt
voice-cloning/champion-voices/bard/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/bel%27veth/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/blitzcrank/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/brand/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/braum/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/briar/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/caitlyn/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/camille/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/cassiopeia/: metadata.csv  metadata.json  reference.txt  slicer_opt.list  train.txt
voice-cloning/champion-voices/cho%27gath/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/corki/: metadata.csv  metadata.json  reference.txt  slicer_opt.list  train.txt
voice-cloning/champion-voices/darius/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/diana/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/dr._mundo/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/draven/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/ekko/: metadata.csv  metadata.json  reference.txt  slicer_opt.list  train.txt
voice-cloning/champion-voices/elise/: metadata.csv  metadata.json  reference.txt  slicer_opt.list  train.txt
voice-cloning/champion-voices/evelynn/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/ezreal/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/fiddlesticks/: metadata.csv  metadata.json  reference.txt  slicer_opt.list
voice-cloning/champion-voices/fiora/: metadata.csv  metadata.json  reference.txt  (+2 more)
voice-cloning/scripts/: __init__.py  generate_dynamic_voice.py  optimize_audio.py  upload_champion_models.sh  upload_to_s3.py
(+672 files in other folders)
