[project]
name = "champion-audio-crawler"
version = "0.1.0"
description = "Scrapes and processes League of Legends champion audio from wiki pages"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "curl-cffi>=0.5.0",
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
champion-crawler = "champion_crawler.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/champion_crawler"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
